--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -50,7 +50,7 @@ a {
 p {
   font-size: 16px;
 }
-/* removed height constraint */
+/* removed height constraint, added 100% width to keep image from cropping when window is resized */
 figure img {
   width: 100%;
   margin-bottom: 25px;
@@ -68,12 +68,16 @@ figure img {
   margin-left: 25px;
 }
 
-section {
+.content {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
+}
+
+section {
   margin-bottom: 20px;
   padding: 50px;
+  height: 300px;
   background-color: #0072bb;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #ffffff;
@@ -92,16 +96,17 @@ section img {
 aside {
   margin-right: 20px;
   padding: 20px;
+  clear: both;
   float: right;
   width: 20%;
   height: 100%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #ffffff;
   background-color: #2589bd;
 }
 
 aside p {
   margin-bottom: 32px;
-  color: #ffffff;
 }
 
 aside h3 {
